infra/k8s/frontdoor-edge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontdoor-edge
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontdoor-edge-docs
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
